소나큐브에서 고칠 부분 수정